--- a/config/config.yml
+++ b/config/config.yml
@@ -65,7 +65,7 @@ framework:
     captureScreenshotOnFailure: true
     saveHtmlPageOnFailure: false
     load_all_uimaps: true
-    load_all_data: true
+    load_all_data: false
     cache:
         frontend:
             name: 'core'
@@ -130,8 +130,8 @@ applications:
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
     magento2enterprise: &magento2enterprise
-        fallbackOrderFixture: 'enterprise2, enterprise, community2, default'
-        fallbackOrderHelper: 'Enterprise2, Enterprise, Community2, Core'
+        fallbackOrderFixture: 'enterprise2, community2, default'
+        fallbackOrderHelper: 'Enterprise2, Community2, Core'
         areas:
             admin:
                 url: 'http://www.localhost.com/magento2_enterprise/control/'
