--- a/fixture/default/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
@@ -380,10 +380,10 @@ checkout_multishipping_review_order:
                             card_data: //table
                 -
                     shipping_address_info:
-                        xpath: //div[@class='col2-set'][not(h2='Billing Information')]
+                        xpath: //div[h2='Shipping Information']
                         pageelements:
-                            shipping_method_address_header: "[%number%]/h3"
-                            shipping_method_address: "[%number%]//address"
+                            shipping_method_address_header: /h3[%number%]
+                            shipping_method_address: //div[contains(@class,'col-narrow')][%number%]//address
                 -
                     shipping_address:
                         xpath: //h3[text()='%addressHeader%']/following-sibling::*/div[contains(div/h4,'Shipping To')]
