--- a/fixture/default/core/Mage/Checkout/data/Payment.yml
+++ b/fixture/default/core/Mage/Checkout/data/Payment.yml
@@ -228,8 +228,11 @@ payflowpro_mastercard:
 #*********************************************
 
 payment_checkmoney:
-    payment_method: Check / Money order
-
+    payment_method: Check Money Order
+            
+payment_cashondelivery:
+    payment_method: Cash On Delivery
+    
 payment_savedcc:
     payment_method: Credit Card (saved)
     payment_info: *visaSavedCC
