--- a/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -2597,6 +2597,33 @@ system_configuration:
                                         cmo_payment_from_applicable_countries_use_default: //input[@name='groups[checkmo][fields][allowspecific][inherit]']
                                         cmo_payment_from_specific_countries_use_default: //input[@name='groups[checkmo][fields][specificcountry][inherit]']
                             -
+                                cash_on_delivery_payment:
+                                    xpath: //fieldset[@id='payment_cashondelivery']
+                                    links:
+                                        bank_transfer_payment_link: //parent::div//a[@id='payment_cashondelivery-head']
+                                    fields:
+                                        cod_title: //input[@name='groups[cashondelivery][fields][title][value]']
+                                        cod_instruction: //textarea[@name='groups[cashondelivery][fields][instructions][value]']
+                                        cod_minimum_order_total: //input[@name='groups[cashondelivery][fields][min_order_total][value]']
+                                        cod_maximum_order_total: //input[@name='groups[cashondelivery][fields][max_order_total][value]']
+                                        cod_sort_order: //input[@name='groups[cashondelivery][fields][sort_order][value]']
+                                    dropdowns:
+                                        cod_enabled: //select[@name='groups[cashondelivery][fields][active][value]']
+                                        cod_new_order_status: //select[@name='groups[cashondelivery][fields][order_status][value]']
+                                        cod_payment_from_applicable_countries: //select[@name='groups[cashondelivery][fields][allowspecific][value]']
+                                    multiselects:
+                                        cod_payment_from_specific_countries: //select[@name='groups[cashondelivery][fields][specificcountry][value][]']
+                                    checkboxes:
+                                        cod_title_use_default: //input[@name='groups[cashondelivery][fields][title][inherit]']
+                                        cod_instruction_use_default: //input[@name='groups[cashondelivery][fields][instructions][inherit]']
+                                        cod_minimum_order_total_use_default: //input[@name='groups[cashondelivery][fields][min_order_total][inherit]']
+                                        cod_maximum_order_total_use_default: //input[@name='groups[cashondelivery][fields][max_order_total][inherit]']
+                                        cod_sort_order_use_default: //input[@name='groups[cashondelivery][fields][sort_order][inherit]']
+                                        cod_enabled_use_default: //input[@name='groups[cashondelivery][fields][active][inherit]']
+                                        cod_new_order_status_use_default: //input[@name='groups[cashondelivery][fields][order_status][inherit]']
+                                        cod_payment_from_applicable_countries_use_default: //input[@name='groups[cashondelivery][fields][allowspecific][inherit]']
+                                        cod_payment_from_specific_countries_use_default: //input[@name='groups[cashondelivery][fields][specificcountry][inherit]']
+                            -
                                 zero_subtotal_checkout:
                                     xpath: //fieldset[@id='payment_free']
                                     links:
