Implemented APIA-547: changes api code according to Magento 2 code changes and documented about it - fixed build tests http_host & url

--- a/dev/api-tests/integration/phpunit.xml.dist
+++ b/dev/api-tests/integration/phpunit.xml.dist
@@ -47,7 +47,7 @@
     <php>
         <ini name="date.timezone" value="America/Los_Angeles"/>
         <!-- HTTP Host-->
-        <const name="TESTS_HTTP_HOST" value="dd.varien.com"/>
+        <const name="TESTS_HTTP_HOST" value="tests.host"/>
         <!-- Admin User -->
         <const name="TESTS_ADMIN_USERNAME" value="admin"/>
         <!-- Admin Password -->
