--- a/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -32,8 +32,8 @@ system_configuration:
     mca: system_config/
     click_xpath: //ul[@id='nav']//a[contains(@href, 'system_config/')]
     title: Configuration / System / Magento Admin
-    uimap:
-        form: &systemConfiguration
+    uimap: &system_configuration_uimap
+        form:
             fieldsets:
                 -
                     current_configuration_scope:
@@ -4350,29 +4350,19 @@ system_configuration:
 system_configuration_tabs:
     mca: system_config/edit/section/%tabName%/
     title: Configuration / System / Magento Admin
-    uimap:
-        form: *systemConfiguration
-        buttons:
-            save_config: //button[span='Save Config']
-        messages:
-            success_saved_config: //li[normalize-space(@class)='success-msg' and contains(.,'The configuration has been saved.')]
+    uimap: *system_configuration_uimap
 
 system_configuration_website:
     mca: system_config/edit/section/%tabName%/website/%webSite%/
     title: Configuration / System / Magento Admin
-    uimap:
-        form: *systemConfiguration
-        buttons:
-            save_config: //button[span='Save Config']
-        messages:
-            success_saved_config: //li[normalize-space(@class)='success-msg' and contains(.,'The configuration has been saved.')]
+    uimap: *system_configuration_uimap
 
 system_configuration_store:
     mca: system_config/edit/section/%tabName%/website/%webSite%/store/%storeName%/
     title: Configuration / System / Magento Admin
-    uimap:
-        form: *systemConfiguration
-        buttons:
-            save_config: //button[span='Save Config']
-        messages:
-            success_saved_config: //li[normalize-space(@class)='success-msg' and contains(.,'The configuration has been saved.')]
+    uimap: *system_configuration_uimap
+
+system_configuration_country:
+    mca: system_config/edit/section/payment/country/%country%
+    title: Configuration / System / Magento Admin
+    uimap: *system_configuration_uimap
